32. Step 18 - Internationalization for RESTful Services.

--- a/restful-web-services/pom.xml
+++ b/restful-web-services/pom.xml
@@ -34,6 +34,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-hateoas</artifactId>
 		</dependency>
+
+		<!-- HATEOAS - Hypermedia as the Engine of Application State -->
+
+		<!-- Internationalization - i18n -->
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
