--- a/restful-web-services/src/main/resources/application.properties
+++ b/restful-web-services/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 logging.level.org.springframework = debug
 spring.jackson.serialization.write-dates-as-timestamps=false
 management.endpoints.web.exposure.include=*
+management.security.enabled=false
+security.user.name=username
+security.user.password=password
