47. Step 31 - Updating GET methods on User Resource to use JPA.

--- a/restful-web-services/src/main/resources/application.properties
+++ b/restful-web-services/src/main/resources/application.properties
@@ -2,5 +2,14 @@ logging.level.org.springframework = debug
 spring.jackson.serialization.write-dates-as-timestamps=false
 management.endpoints.web.exposure.include=*
 management.security.enabled=false
-security.user.name=username
-security.user.password=password
+
+# Spring Security
+# Disabled security by removing the Jar
+#security.user.name=username
+#security.user.password=password
+
+# JPA
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.jpa.defer-datasource-initialization=true
+spring.jpa.show-sql=true
+spring.h2.console.enabled=true
